--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,20 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>
+            Url WebSocket
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <form *ngIf="initialForm" [formGroup]="initialForm">
+        <ion-item>
+            <ion-label floating>URL WS</ion-label>
+            <ion-input type="text" formControlName="service_url"></ion-input>
+        </ion-item>
+
+        <button ion-button block large class="bg-color-2 color-1" [disabled]="!initialForm || !initialForm.valid" (click)="submitForm()">
+            Salvar
+        </button>
+    </form>
 </ion-content>
