--- a/src/pages/list-of-entraces/list-of-entraces.html
+++ b/src/pages/list-of-entraces/list-of-entraces.html
@@ -8,14 +8,14 @@
     <ion-list *ngIf="entracesList">
         <ion-item *ngFor="let entrace of entracesList">
             <h2>{{ entrace.name }}</h2>
-            <p>{{ entrace.id }}</p>
+            <p># {{ entrace.id }}</p>
 
-            <button [hidden]="isJoinedEntrace(entrace.id)" ion-button clear item-end (click)="joinEntrace(entrace.id)">
-                <ion-icon name="add"></ion-icon>
+            <button [hidden]="isJoinedEntrace(entrace.id)" ion-button clear item-end (click)="joinEntrace(entrace.id)" color="danger">
+                <ion-icon name="eye-off"></ion-icon>
             </button>
 
             <button [hidden]="!isJoinedEntrace(entrace.id)" ion-button clear item-end (click)="leaveEntrace(entrace.id)">
-                <ion-icon name="close"></ion-icon>
+                <ion-icon name="eye"></ion-icon>
             </button>
         </ion-item>
     </ion-list>
