--- a/src/pages/new-occurrence/new-occurrence.html
+++ b/src/pages/new-occurrence/new-occurrence.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the NewOccurrencePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>NewOccurrence</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <ion-title>Potencial transgressor identificado</ion-title>
+    </ion-navbar>
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content>
+    <div class="image-compare-block">
+        <div class="image-item" [style.background-image]=""></div>
+        <div class="image-item" [style.background-image]=""></div>
+    </div>
+    <h3>{{ Informações }}</h3>
+    <p>Nome: {{ occurrenceData.person_name }}</p>
+    <p>Documento: {{ occurrenceData.person_identifier }}</p>
+    <p>Delito:</p>
+    <div>{{ occurrenceData.fault_desc }}</div>
 </ion-content>
