--- a/src/pages/list-of-occurrences/list-of-occurrences.html
+++ b/src/pages/list-of-occurrences/list-of-occurrences.html
@@ -1,14 +1,22 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>Ocorrências</ion-title>
+        <ion-title>Lista de ocorrências</ion-title>
     </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
-    <ion-list>
+    <ion-list *ngIf="occurences && occurences.length > 0">
         <ion-item *ngFor="let occurence of occurences">
             {{ occurence.value }}
         </ion-item>
     </ion-list>
+    <div class="center-content occurences-empty-list" *ngIf="!occurences || occurences.length == 0">
+        <div class="content-container">
+            <div class="inner-content">
+                <h2><ion-icon name="finger-print"></ion-icon></h2>
+                <p>Nenhuma ocorrência até o momento</p>
+            </div>
+        </div>
+    </div>
 </ion-content>
