--- a/src/pages/list-of-occurrences/list-of-occurrences.html
+++ b/src/pages/list-of-occurrences/list-of-occurrences.html
@@ -6,24 +6,28 @@
 </ion-header>
 
 <ion-content>
-    <ion-list *ngIf="occurences && occurences.length > 0">
-        <ion-item-sliding *ngFor="let occurence of occurences">
+    <ion-list *ngIf="occurrences && occurrences.length > 0">
+        <ion-item-sliding *ngFor="let occurrence of occurrences">
             <ion-item>
                 <ion-thumbnail item-start>
-                    <img [src]="getIdentifierOccurrence(occurence.id)">
+                    <img [src]="getIdentifierOccurrence(occurrence.id)">
                 </ion-thumbnail>
 
-                <h2>{{ occurence.person_name }}</h2>
-                <p># {{ occurence.id }}</p>
+                <h2>{{ occurrence.person_name }}</h2>
+                <h5>Ocorrência #{{ occurrence.id }}</h5>
+                <p [hidden]="occurrence.status == 0" [class.text-success]="occurrence.status == 1" [class.text-danger]="occurrence.status == 2">
+                    <ion-icon [name]="occurrence.status == 1 ? 'exit' : 'remove-circle'"></ion-icon>
+                    {{ occurrence.status_message }}
+                </p>
             </ion-item>
             <ion-item-options side="right">
-                <button ion-button color="primary" (click)="viewOccurrence(occurence)">
+                <button ion-button color="primary" (click)="viewOccurrence(occurrence)">
                     <ion-icon name="information-circle"></ion-icon> Ver
                 </button>
             </ion-item-options>
         </ion-item-sliding>
     </ion-list>
-    <div class="center-content occurences-empty-list" *ngIf="!occurences || occurences.length == 0">
+    <div class="center-content occurrences-empty-list" *ngIf="!occurrences || occurrences.length == 0">
         <div class="content-container">
             <div class="inner-content">
                 <h2><ion-icon name="finger-print"></ion-icon></h2>
