Settings page update

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,7 +14,7 @@
         </ion-item>
 
         <ion-item>
-            <ion-label floating>ID usuário</ion-label>
+            <ion-label floating>Usuário</ion-label>
             <ion-input type="text" formControlName="user_id"></ion-input>
         </ion-item>
 
